<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.costtracker_version_02.WelcomeScreenActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_second_activity" />

    <Button
        android:id="@+id/costbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="23dp"
        android:text="@string/button_cost" />

    <Button
        android:id="@+id/incomebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/costbutton"
        android:layout_alignBottom="@+id/costbutton"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@+id/costbutton"
        android:text="@string/button_income" />

    <Button
        android:id="@+id/debtbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/costbutton"
        android:layout_below="@+id/costbutton"
        android:layout_marginTop="20dp"
        android:text="@string/button_debt" />

    <Button
        android:id="@+id/loanbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/debtbutton"
        android:layout_alignBottom="@+id/debtbutton"
        android:layout_alignLeft="@+id/incomebutton"
        android:layout_alignRight="@+id/incomebutton"
        android:text="@string/button_loan" />

</RelativeLayout>